# GasketVision

./: .gitignore  CMakeLists.txt  CMakePresets.json  push_github.bat  run.bat
CameraService/: main.cpp
CameraService/camera/: GigEVisionCamera.cpp  GigEVisionCamera.h  IVisionImageSource.cpp  IVisionImageSource.h  ImageSourceFactory.cpp  ImageSourceFactory.h  SyntheticImageSource.cpp  SyntheticImageSource.h
CameraService/ipc/: CameraIpcLayout.h  CameraIpcPublisher.cpp  CameraIpcPublisher.h  CameraIpcSync.cpp  CameraIpcSync.h  VisionFrame.h
CameraService/socket/: SocketLineCodec.h
CameraService/socket/camera_engine/: CameraEngineSocketClient.cpp  CameraEngineSocketClient.h
CameraService/socket/camera_hmi/: CameraHmiSocketClient.cpp  CameraHmiSocketClient.h
CameraService/worker/: CameraGrabWorker.cpp  CameraGrabWorker.h  CameraPublishWorker.cpp  CameraPublishWorker.h
HMI/: main.cpp
HMI/ipc/: CameraIpcSubscriber.cpp  CameraIpcSubscriber.h  CameraIpcSubscriberWorker.cpp  CameraIpcSubscriberWorker.h  HmiIpcSubscriber.cpp  HmiIpcSubscriber.h  HmiIpcSubscriberWorker.cpp  HmiIpcSubscriberWorker.h  HmiStatusSocketServer.cpp  HmiStatusSocketServer.h  InspectionDataService.cpp  InspectionDataService.h  InspectionResult.h
HMI/socket/: SocketLineCodec.h
HMI/socket/camera_hmi/: CameraHmiProtocol.h  CameraHmiSocketServer.cpp  CameraHmiSocketServer.h
HMI/socket/engine_hmi/: EngineHmiProtocol.h  EngineHmiSocketServer.cpp  EngineHmiSocketServer.h
HMI/stats/: InspectionAggregator.cpp  InspectionAggregator.h  OkNgStatsPanel.cpp  OkNgStatsPanel.h
HMI/ui/: InspectionWindow.cpp  InspectionWindow.h  OkNgPieChart.cpp  OkNgPieChart.h  ShmImageLabel.cpp  ShmImageLabel.h
Pie_Chart_Control/: PieChartConfig.h  PieChartConfigDialog.h  README.md  SinglePieChart.cpp  SinglePieChart.h  VarCountData.h  main.cpp  widget.h  饼图控件思路.txt
VisionEngine/: main.cpp
VisionEngine/algo/: GasketInspector.cpp  GasketInspector.h
VisionEngine/ipc_camera/: CameraAnnotTarget.h  CameraIpcReader.cpp  CameraIpcReader.h
VisionEngine/ipc_hmi/: HmiIpcLayout.h  HmiIpcPublisher.cpp  HmiIpcPublisher.h  HmiIpcSync.cpp  HmiIpcSync.h  HmiStatusSocketClient.cpp  HmiStatusSocketClient.h
VisionEngine/socket/: SocketLineCodec.h
VisionEngine/socket/camera_engine/: CameraEngineProtocol.h  CameraEngineSocketServer.cpp  CameraEngineSocketServer.h
VisionEngine/socket/engine_hmi/: EngineHmiSocketClient.cpp  EngineHmiSocketClient.h
VisionEngine/worker/: InspectDispatch.h  StationAlgoWorker.cpp  StationAlgoWorker.h  StationCommWorker.cpp  StationCommWorker.h
config/: vision_engine.json  vision_engine_test.json
docs/: architecture.md  attention.md
test/: .gitignore  pie_chart_okng.json  run_test.bat  vision_engine.json
test/scripts/: diagnose_samples.py  generate_samples.py
